[ADD] Set basic view of add person view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Contact</string>
+    <string name="name">Name</string>
+    <string name="age">Age</string>
+    <string name="company">Company</string>
+    <string name="hobby">Hobby</string>
+    <string name="personality">Personality</string>
+    <string name="marriage">Marriage</string>
+    <string name="children">Children</string>
+    <string name="like">Like</string>
+    <string name="dont_like">Don\'t like</string>
 </resources>
